--- a/calendar.html
+++ b/calendar.html
@@ -188,7 +188,7 @@
 
   // Firebase config
   const firebaseConfig = {
-    apiKey: "AIzaSyA...",
+    apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
     authDomain: "yfned-fleet-nfc.firebaseapp.com",
     databaseURL: "https://yfned-fleet-nfc-default-rtdb.firebaseio.com",
     projectId: "yfned-fleet-nfc",
